[gd_scene load_steps=3 format=3 uid="uid://ber07i11b5o34"]

[ext_resource type="Script" path="res://scripts/player_select_menu.gd" id="1_vdrrh"]

[sub_resource type="LabelSettings" id="LabelSettings_cnxuu"]
font_size = 24

[node name="PlayerSelectMenu" type="CanvasLayer"]
script = ExtResource("1_vdrrh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Select number of players"
label_settings = SubResource("LabelSettings_cnxuu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="OnePlayerButton" type="Button" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "1 PLAYER"

[node name="TwoPlayerButton" type="Button" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "2 PLAYERS"

[node name="BackButton" type="Button" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "BACK"
